--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,7 @@
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
         <title>STABILIQ | Membership Program for Salaried Professionals</title>
-        <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
+        <!-- <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script> -->
         <!--
         These two scripts have been added for the Visual Edits, please do not edit or remove them
         -->
@@ -30,9 +30,9 @@
             // Only load visual edit scripts when inside an iframe
             if (window.self !== window.top) {
                 // Load debug monitor script
-                var debugMonitorScript = document.createElement('script');
-                debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
-                document.head.appendChild(debugMonitorScript);
+                // var debugMonitorScript = document.createElement('script');
+                // debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
+                // document.head.appendChild(debugMonitorScript);
 
                 // Configure Tailwind
                 window.tailwind = window.tailwind || {};
@@ -106,7 +106,7 @@
                 Contact Us
             </p>
         </a>
-        <script>
+        <!-- <script>
             !(function (t, e) {
                 var o, n, p, r;
                 e.__SV ||
@@ -175,6 +175,6 @@
                     recordCrossOriginIframes: true,
                 },
             });
-        </script>
+        </script> -->
     </body>
 </html>
